MD Extensions: avoid sending remove event when adding immediately afterward

Bug: 836988
Cq-Include-Trybots: master.tryserver.chromium.linux:closure_compilation
Change-Id: Iedcac22a68cb73f68f314f35b1e1c771ab52c8ad
Reviewed-on: https://chromium-review.googlesource.com/1036199
Commit-Queue: Esmael El-Moslimany <aee@chromium.org>
Reviewed-by: Devlin <rdevlin.cronin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#557298}
Former-commit-id: 19f16a5138c95e212161ecfeb1fd0d9c5ccef457